--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -229,6 +229,21 @@
     <Filter Include="sonia.mp">
       <UniqueIdentifier>{9a882ece-22fe-43b1-b246-4d5cc1471e93}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sonia.utility\xmlbuilder\detail">
+      <UniqueIdentifier>{6c47da02-fe62-47bd-9850-73d09408f48c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.utility\mvvm\beng">
+      <UniqueIdentifier>{6bc81b9a-0216-48f7-90d9-2e71eeec1667}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.utility\lang">
+      <UniqueIdentifier>{5483fc27-65d4-4e1a-8738-6d33d9552787}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.utility\mvvm\beng\entities">
+      <UniqueIdentifier>{14b0d319-0f06-4e17-8547-a42b0122862f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.utility\mvvm\beng\ast visitors">
+      <UniqueIdentifier>{abca3640-d615-48e8-b0cd-5d88432883e1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\sonia\shared_ptr.hpp">
@@ -1950,6 +1965,96 @@
     <ClInclude Include="..\..\..\sonia\utility\invokation\functor_object.hpp">
       <Filter>sonia.utility\invokation</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\xmlbuilder\advxmlbuilder.hpp">
+      <Filter>sonia.utility\xmlbuilder</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\xmlbuilder\detail\xmlbuilder_model.hpp">
+      <Filter>sonia.utility\xmlbuilder\detail</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\xmlbuilder\detail\type_parser.hpp">
+      <Filter>sonia.utility\xmlbuilder\detail</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\xmlbuilder\detail\types.hpp">
+      <Filter>sonia.utility\xmlbuilder\detail</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\builder_view_model.hpp">
+      <Filter>sonia.utility\mvvm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\bunch_builder_view_model.hpp">
+      <Filter>sonia.utility\mvvm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\beng.tab.hpp">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\location.hh">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\ast.hpp">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\parser.hpp">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\lang\utility.hpp">
+      <Filter>sonia.utility\lang</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\lang\string_literal_registry.hpp">
+      <Filter>sonia.utility\lang</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\unit.hpp">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\lang\parameterized_identifier_registry.hpp">
+      <Filter>sonia.utility\lang</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\lang\qname.hpp">
+      <Filter>sonia.utility\lang</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\lang\identifier_builder.hpp">
+      <Filter>sonia.utility\lang</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\lang\entity_registry.hpp">
+      <Filter>sonia.utility\lang</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\lang\entity.hpp">
+      <Filter>sonia.utility\lang</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\enum_entity.hpp">
+      <Filter>sonia.utility\mvvm\beng\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\type_entity.hpp">
+      <Filter>sonia.utility\mvvm\beng\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\declaration_visitor.hpp">
+      <Filter>sonia.utility\mvvm\beng\ast visitors</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\expression_visitor.hpp">
+      <Filter>sonia.utility\mvvm\beng\ast visitors</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\beng.hpp">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\compiler.hpp">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\procedure_entity.hpp">
+      <Filter>sonia.utility\mvvm\beng\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\semantic.hpp">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\lang\vm.hpp">
+      <Filter>sonia.utility\lang</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\beng\variable_entity.hpp">
+      <Filter>sonia.utility\mvvm\beng\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\mvvm\builder_vm.hpp">
+      <Filter>sonia.utility\mvvm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\mp\basic_integer.hpp">
+      <Filter>sonia.mp</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\sonia\logger\logger.cpp">
@@ -2207,8 +2312,52 @@
     <ClCompile Include="..\..\..\sonia\utility\lua\sonia_lib.cpp">
       <Filter>sonia.utility\lua</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\sonia\utility\xmlbuilder\advxmlbuilder.cpp">
+      <Filter>sonia.utility\xmlbuilder</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\utility\xmlbuilder\detail\xmlbuilder_model.cpp">
+      <Filter>sonia.utility\xmlbuilder\detail</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\utility\xmlbuilder\detail\xmlbuilder_types.cpp">
+      <Filter>sonia.utility\xmlbuilder\detail</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\utility\mvvm\builder_view_model.cpp">
+      <Filter>sonia.utility\mvvm</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\utility\mvvm\bunch_builder_view_model.cpp">
+      <Filter>sonia.utility\mvvm</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\utility\mvvm\beng\beng.tab.cpp">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\utility\mvvm\beng\beng.yy.cpp">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\utility\mvvm\beng\ast.cpp">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\utility\mvvm\beng\parser.cpp">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\utility\mvvm\beng\beng_unit.cpp">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\utility\mvvm\builder_vm.cpp">
+      <Filter>sonia.utility\mvvm</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\sonia.natvis" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\sonia\utility\mvvm\beng\generate_parser.cmd">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </None>
+    <None Include="..\..\..\sonia\utility\mvvm\beng\beng.l">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </None>
+    <None Include="..\..\..\sonia\utility\mvvm\beng\beng.y">
+      <Filter>sonia.utility\mvvm\beng</Filter>
+    </None>
   </ItemGroup>
 </Project>
