--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -314,8 +314,11 @@
     <ClInclude Include="..\..\..\sonia\mpl\vector.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\zip_view.hpp" />
     <ClInclude Include="..\..\..\sonia\mp\arithmetic.hpp" />
+    <ClInclude Include="..\..\..\sonia\mp\basic_decimal.hpp" />
     <ClInclude Include="..\..\..\sonia\mp\basic_integer.hpp" />
     <ClInclude Include="..\..\..\sonia\mp\ct.hpp" />
+    <ClInclude Include="..\..\..\sonia\mp\decimal.hpp" />
+    <ClInclude Include="..\..\..\sonia\mp\decimal.ipp" />
     <ClInclude Include="..\..\..\sonia\mp\integer_view.hpp" />
     <ClInclude Include="..\..\..\sonia\mp\limbs_from_string.hpp" />
     <ClInclude Include="..\..\..\sonia\mp\limb_arithmetic.hpp" />
@@ -508,12 +511,8 @@
     <ClInclude Include="..\..\..\sonia\utility\mvvm\lua_view_model.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\mvvm\view_model.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\mvvm\view_model.ipp" />
-    <ClInclude Include="..\..\..\sonia\utility\number\basic_decimal.hpp" />
-    <ClInclude Include="..\..\..\sonia\utility\number\decimal.hpp" />
-    <ClInclude Include="..\..\..\sonia\utility\number\decimal.ipp" />
     <ClInclude Include="..\..\..\sonia\utility\number\fixed_uint.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\number\float16.hpp" />
-    <ClInclude Include="..\..\..\sonia\utility\number\integer.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\number\math.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\number\meta\for_each_wi.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\number\meta\uint.hpp" />
@@ -851,7 +850,6 @@
     <ClCompile Include="..\..\..\sonia\utility\mvvm\bunch_builder_view_model.cpp" />
     <ClCompile Include="..\..\..\sonia\utility\mvvm\lua_view_model.cpp" />
     <ClCompile Include="..\..\..\sonia\utility\mvvm\view_model.cpp" />
-    <ClCompile Include="..\..\..\sonia\utility\number\number_integer.cpp" />
     <ClCompile Include="..\..\..\sonia\utility\number\number_math.cpp" />
     <ClCompile Include="..\..\..\sonia\utility\parameters\parameters.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
